[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/SimpleEntityEditor.gd" id="1"]

[node name="SimpleEntityEditor" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HSplitContainer" type="HSplitContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="LeftPanel" type="VBoxContainer" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
custom_minimum_size = Vector2(250, 0)

[node name="Controls" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2

[node name="AddPartButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/Controls"]
layout_mode = 2
text = "Add Body Part"

[node name="DeletePartButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/Controls"]
layout_mode = 2
text = "Delete Selected Part"

[node name="BodyPartsList" type="ItemList" parent="VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="PropertiesPanel" type="VBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel"]
layout_mode = 2

[node name="PartNameLabel" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/PropertiesPanel"]
layout_mode = 2
text = "Part Properties"

[node name="PartNameEdit" type="LineEdit" parent="VBoxContainer/HSplitContainer/LeftPanel/PropertiesPanel"]
layout_mode = 2
placeholder_text = "Part Name"

[node name="ModeLabel" type="Label" parent="VBoxContainer/HSplitContainer/LeftPanel/PropertiesPanel"]
layout_mode = 2
text = "Edit Mode:"

[node name="EditModeButtons" type="HBoxContainer" parent="VBoxContainer/HSplitContainer/LeftPanel/PropertiesPanel"]
layout_mode = 2

[node name="SelectModeButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/PropertiesPanel/EditModeButtons"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "Select"

[node name="AddPointModeButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/PropertiesPanel/EditModeButtons"]
layout_mode = 2
toggle_mode = true
text = "Add Points"

[node name="AttachModeButton" type="Button" parent="VBoxContainer/HSplitContainer/LeftPanel/PropertiesPanel/EditModeButtons"]
layout_mode = 2
toggle_mode = true
text = "Attachment"

[node name="RightPanel" type="Control" parent="VBoxContainer/HSplitContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Canvas" type="Control" parent="VBoxContainer/HSplitContainer/RightPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0